# cartrita-ai-os

./: .codacyignore  .dockerignore  .env  .env.example  .env.production  .flake8  .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  .pylintrc  AI_DEPLOYMENT.md  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  LANGCHAIN_INTEGRATION_SUCCESS.md  LANGCHAIN_INTEGRATION_SUMMARY.md  PR_COMMENT.md  README.md  SECURITY_REVIEW_REPORT.md  SETUP-STATUS.md  admin_auth_validation_results.json  analyze_critical_issues.py  cartrita_analysis_report.json  cartrita_langchain_demo.py  codacy-eslint.sarif  codacy-exclude.txt  codacy-full-analysis.sarif  config_security_audit.json  config_security_audit.py  conftest.py  cors-test.html  coverage.xml  critical_issues_analysis.json  deploy.sh  docker-compose.yml  download_openai_docs.py  download_openai_tutorials.py  download_pydantic_docs.py  eslint-results.json  extract_real_issues.py  (+19 more)
.claude/agents/: cartrita-engineering-assistant.md  code-assistant.md
.codacy/: cli.sh  codacy.yaml
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY_SECRETS.md  claude-instructions.md  copilot-instructions.md
.github/chatmodes/: Cartrit-DB-Specialist.chatmode.md  Cartrita-Backend.chatmode.md  Cartrita-frontend.chatmode.md
.github/ci/: TRIGGER_CODACY.md
.github/workflows/: ci.yml  codacy-analysis.yml  dependency-layering-guard.yml  dependency-lock-verify.yml  deploy.yml  pre-commit.yml  security-complete-assessment.yml  security-container-scan.yml  security-dependency-scan.yml  security-infrastructure-scan.yml  security-sast.yml  static-analysis-nightly.yml  static-analysis.yml
.venv-clean/: pyvenv.cfg
.venv-lock/: pyvenv.cfg
.venv-repro/: pyvenv.cfg
commands-help/: github-mcp-server
docs/: INDEX.md  UNIQUE_DIFFERENTIATING_FEATURES.md  anthropic-research-report.bk  api-schemas.json  build-completion-report.md  configuration-integrity-audit.md  github-research-report.md  openai-research-report.md  openai-streaming-analysis.md  playwright-mcp-setup.md  project-status-report.md  security-remediation-report.md  tavily-research-report.md
docs/Charts_&_Maps/: README.md  documentation-reorganization-plan.md  phase-progress-map.md  security-docs-map.md  streaming-transport-comparison.md  technology-pattern-index.md  vendor-research-summary.md
docs/P.R.D/: PRD.md
docs/Prompt-expls/: API-Gateway-Prompt-TMP  API-Prompt-Template.md
docs/Prompts/: cartrita-engineering-assistant-optimized.md  cartrita-optimized-api-prompt.md
docs/agents/: agent-architecture.md
docs/api/: README.md  api-schemas.json  schema-definitions.json
docs/architecture/: README.md  UI_UX_DESIGN_SPECIFICATION.md
docs/codacy/: codacy-issues-report.md  codacy-remediation.md  codacy-workflow.md  sarif-baseline-strategy.md  wsl-invocation-mitigation.md
docs/implementation/: IMPLEMENTATION_SUMMARY.md  README.md  admin-authentication-security.md  api-wiring-specification.md  comprehensive-integration-report.md  configuration-integrity-audit.md  dependency-layering.md  markdown-linting.md  openai-streaming-analysis.md  phase-3-development-2025-update.md  phase-3-progress-report.md  phase-3-validation-report.md  phase-3-voice-integration-specification.md  phase-4-conversational-ai-research-report.md  phase2-implementation-plan.md  phase2-voice-integration-plan.md  schema-definitions.json  task-7-docker-security-completion-report.md  task10-security-validation-completion-report.md  task6-csp-implementation-report.md
docs/open-ai-docs/: COMPLETE_INDEX.md  README.md  introduction.md  quickstart.md
docs/research/: JSX_PARSING_ERROR_RESOLUTION.md  README.md  UNIQUE_DIFFERENTIATING_FEATURES.md  build-completion-report.md  deepgram-research-report.md  huggingface-research-report.md  langsmith-research-report.md  project-status-report.md
docs/security/: README.md  SECRETS_MANAGEMENT_SECURITY.md  configuration-integrity-audit.md
docs/streaming/: README.md  openai-streaming-analysis.md
docs/technology/: 2025-technology-research.md  README.md  deepgram-streaming-integration-patterns-2025.md  fastapi-async-patterns-best-practices-2025.md  langchain-research-report.md  langgraph-agent-orchestration-patterns-2025.md  react-typescript-modern-patterns-2025.md  tanstack-query-jotai-patterns-2025.md
frontend/: .dockerignore  .eslintrc.json  AI_INSTRUCTIONS.md  Dockerfile  README-v2.md  README.md  eslint.config.js  fix-linting.js  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vitest.config.ts
sarif/: README.md
scripts/: analyze_langchain_docs.py  configure_langchain_integration.py  create_deployment_summary.py  env_helper_langchain.py  extract_langchain_docs.py  fix_langchain_issues.py  refactor_agents_langchain.py  test_cartrita_langchain_integration.py  test_final_integration.py  test_langchain_system.py  test_simple_langchain_integration.py  validate_admin_auth.py
tests/: 1757739019402-test_orchestrator_smoke.py  AI_TESTING.md  cartrita_langchain_demo.py  conftest.py  demo_memory_agent.py  isolated_metrics_test.py  smoke_test_server.py  test_admin_authentication.py  test_agent_imports_smoke.py  test_agents_bootstrap.py  test_auth_schemas.py  test_config_settings_defaults.py  test_fallback_on_llm_error.py  test_fallback_provider_basic.py  test_fallback_provider_error_path.py  test_fallback_provider_smoke.py  test_guard_no_direct_chatopenai.py  test_langchain_enhanced_imports.py  test_llm_factory_unit.py  test_main_app_smoke.py  test_memory_agent.py  test_memory_simple.py  test_metrics_endpoint.py  test_metrics_server.py  test_metrics_standalone.py  test_openai_message_conversion.py  test_openai_service.py  test_openai_service_package_import.py  test_openai_service_streaming_tool.py  test_openai_service_tools.py  test_orchestrator_smoke.py  test_orm_mode_grep.py  test_rate_limiter_advanced.py  test_rate_limiter_basic.py  test_server.py  test_service_manager.py  test_stream_ordering.py  test_supervisor_exception_path.py  test_supervisor_process_chat.py  test_supervisor_single_iteration.py  (+3 more)
tools/: wsl
(+713 files in other folders)
